# neo4j_ether

./: .env.example  .gitignore  README.md  api_utils.py  config.py  ddl_queries.py  dml_queries.py  load.py  main.py  model_connection.py  plots.py  preprocess.py  process_results.py  pyproject.toml
db/: analytics_queries.py  connection.py  schema_queries.py
docs/: CHANGELOG.md  glossary.md  roadmap.md
docs/adr/: 0001-data-source-bigquery.md  0002-drop-balance-attribute.md  0003-experiment-design-scale-ladder-multi-era.md  0004-repo-restructure.md  0005-neo4j-runtime-and-write-path.md  0006-unify-transaction-label.md  0007-bigquery-partition-pruning.md  0008-correct-participation-denominator.md  README.md
docs/paper/: Blockchain as GDB Juan Mejia 6 de marzo GG - Docs.docx  appendix_tables.md  paper_v2.docx  paper_v2.md
ingestion/: etherscan.py  pipeline.py  transform.py
reporting/: comparison.py  io.py  single_run.py
scripts/: dump_stats.py  gen_appendix_tables.py  gen_model_figures.py  gen_paper_figures.py  run_analysis.py  run_experiments.py  run_ingestion.py
src/ether/: config.py
src/ether/db/: analytics_queries.py  connection.py  schema_queries.py
src/ether/experiments/: eras.py  runner.py
src/ether/ingestion/: bigquery.py  etherscan.py  pipeline.py
src/ether/reporting/: comparison.py  io.py  single_run.py
src/ether/visualization/: bar_charts.py  line_charts.py
visualization/: line_charts.py
