[project]
name = "ether"
version = "0.1.0"
description = "Neo4j graph-database model for Ethereum transaction analytics (blockchain trajectories)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "neo4j>=5.28.0",
    "google-cloud-bigquery>=3.27.0",
    "db-dtypes>=1.3.0",
    "pandas>=3.0.1",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "python-dotenv>=1.2.2",
    "tabulate>=0.10.0",
    "requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ether"]
